# graphene

./: .clang-format  CMakeLists.txt  README.md  conanfile.py  config.hpp.in
cmake/: CompileShaders.cmake  CompileTargets.cmake
glsl/: anisotropic_fill.frag  bilateral_filter.frag  build_pyramid.frag  filt.frag  frag.spv  gbuffer.frag  gbuffer.vert  geometry.frag  imgui.frag  init_pyramid.frag  lod_visibility.frag  normal_shader.frag  render_depth.frag  simple.frag  simple.vert  textured_triangle.frag  vert.spv  visibility.frag
include/: application.hpp  application.ipp  boolean.hpp  boolean.ipp  box.hpp  button.hpp  camera.hpp  camera.ipp  camera_model.hpp  choice.hpp  choice.ipp  choose_file.hpp  choose_file.ipp  cross.hpp  depth_vis_pass.hpp  events.hpp  graphene.hpp  imgui.hpp  kernel.hpp  kernel.ipp  lines.hpp  orbit_camera_model.hpp  point_visibility.hpp  primitive_renderer.hpp  range.hpp  real.hpp  renderable.hpp  renderable.ipp  renderer.hpp  rgba.hpp  section.hpp  shared.hpp  shared.ipp  signal_manager.hpp  splat_renderer.hpp  splats.comp  text.hpp  tonemap.comp  tonemap_pass.hpp  tracked.hpp  (+3 more)
include/graphene/: application.hpp  application.ipp  button.ipp  camera.hpp  camera.ipp  camera_model.hpp  choose_file.hpp  common.hpp  config.hpp  events.hpp  graphene.hpp  integer.hpp  integer.ipp  lines.hpp  orbit_camera_model.hpp  range.ipp  real.ipp  renderable.hpp  renderable.ipp  rgb.hpp  rgb.ipp  rgba.ipp  section.ipp  signal_manager.hpp  text.ipp  tracked.ipp  visible_if.ipp  window.hpp  window.ipp
include/impl/: imgui.hpp  point_visibility.hpp  renderer.hpp  texture_pyramid.hpp
src/: anisotropic_fill.frag  application.cpp  boolean.cpp  box.cpp  button.cpp  camera.cpp  choice.cpp  choose_file.cpp  compute_bounding_box.comp  compute_bounding_box_atomic_version.comp.bck  count_grid_points.comp  count_neighbors.comp  cross.cpp  depth_vis_pass.cpp  gather_ray_cylinder_points.comp  geometry.frag  geometry.vert  identity.frag  imgui.cpp  imgui.vert  integer.cpp  lines.cpp  orbit_camera_model.cpp  point_render.frag  point_transform.vert  point_visibility.cpp  precompute_tonemap_lut.comp  prefix_sum.comp  prefix_sum_block_correct.comp  primitive_renderer.cpp  range.cpp  real.cpp  render_depth.frag  renderable.cpp  renderer.cpp  reorder_points.comp  rgb.cpp  rgba.cpp  section.cpp  solid_geometry.frag  (+14 more)
visualizer/simple/: CMakeLists.txt  conanfile.txt
visualizer/simple/src/: simple.cpp
